<resources>
    <string name="app_name">retroShop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email_label">Enter your email address</string>
    <string name="password_label">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="home_label">Home</string>
    <string name="product_label">Productos</string>
    <string name="comment_label">Comentarios</string>
    <string name="profile_label">Perfil</string>

    <string name="home_title">¿Quienes Somos?</string>
    <string name="product_title">Nuestros Productos</string>
    <string name="comment_title">Comentarios</string>
    <string name="profile_title">Mi Perfil</string>
    <string name="product_detail_title">Detalle del Producto</string>
</resources>