<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home_label"/>

    <item
        android:id="@+id/productFragment"
        android:enabled="true"
        android:icon="@drawable/ic_product_24"
        android:title="@string/product_label"/>

    <item
        android:id="@+id/commentFragment"
        android:enabled="true"
        android:icon="@drawable/ic_comment_24"
        android:title="@string/comment_label"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile_label"/>

</menu>