<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_email_layout"
        android:layout_marginVertical="70dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        app:layout_constraintBottom_toTopOf="@id/login_password_layout"
        app:layout_constraintVertical_chainStyle="packed"
        android:hint="@string/email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/login_email_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        android:layout_marginVertical="@dimen/defaultMargin"
        app:endIconMode="password_toggle"
        android:hint="@string/password_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="Forgot your password?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
